Bug 197597 - In KMail, message sorting does not work with "Important" column
Summary: In KMail, message sorting does not work with "Important" column
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: Git (master)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-23 13:12 UTC by Narendra Kadoo
Modified: 2012-11-30 11:44 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Narendra Kadoo 2009-06-23 13:12:40 UTC
Version:           1.11.4 (using 4.2.4 (KDE 4.2.4), Arch Linux)
Compiler:          gcc
OS:                Linux (i686) release 2.6.29-ARCH

In KMail, the messages cannot be sorted using the "Important" column. Sorting works fine with Subject, Sender, Date and Size, but not with "Important". I have not tried other columns.
Comment 1 Martin Koller 2009-08-16 23:48:22 UTC
can confirm with KDE 4.3. Clicking on the header of the "important" or "watched" column does show the sort indicator in the header but does not actually sort the messages.
Comment 2 Laurent Montel 2010-11-04 11:00:04 UTC
Same pb in 4.4.8
Comment 3 Bernd Oliver Sünderhauf 2012-11-28 08:38:59 UTC
Still reproduceable in on KDE 4.9.3.
Please move to kmail2, component "message list".
Should be an easy fix.
Comment 4 Laurent Montel 2012-11-29 07:47:46 UTC
Git commit 3003f1f7df2e9cf4173ce6ba43a76037fbe4bab2 by Montel Laurent.
Committed on 29/11/2012 at 08:46.
Pushed by mlaurent into branch 'master'.

Fix Bug 197597 - In KMail, message sorting does not work with

"Important" column
FIXED-IN: 4.10
But it will work directly with new user but when theme is already stored
we must clone theme and assign order to column.

M  +24   -0    messagelist/core/item_p.h
M  +1    -1    messagelist/core/manager.cpp
M  +21   -1    messagelist/core/model.cpp
M  +2    -1    messagelist/core/model_p.h
M  +2    -0    messagelist/core/sortorder.cpp
M  +10   -9    messagelist/core/sortorder.h

http://commits.kde.org/kdepim/3003f1f7df2e9cf4173ce6ba43a76037fbe4bab2
Comment 5 Bernd Oliver Sünderhauf 2012-11-29 08:04:47 UTC
Ouch. So not at all an "easy fix"...
Awesome that you nevertheless fixed it rightaway!
Comment 6 Bernd Oliver Sünderhauf 2012-11-30 11:24:44 UTC
Sorting by "Important" still doesn't work in my nightly 4.10 pre.
Sorry for my uninformed question, but will the changes be automatically merged in at a later time during the 4.10 rollout?
Comment 7 Laurent Montel 2012-11-30 11:44:48 UTC
"But it will work directly with new user but when theme is already stored we must clone theme and assign order to column."