Fix Bug 197597 - In KMail, message sorting does not work with

"Important" column
BUG: 197597
FIXED-IN: 4.10
But it will work directly with new user but when theme is already stored
we must clone theme and assign order to column.